# hsafa-ai

./: main.py
main_crew/: README.md  pyproject.toml
main_crew/src/main_crew/: README.md  crew.py  report.md
main_crew/src/main_crew/config/: agents.yaml  tasks.yaml
main_crew/src/main_crew/tools/: postgres.py
