[project]
name = "main_crew"
version = "0.1.0"
description = "main_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
main_crew = "main_crew.main:run"
run_crew = "main_crew.main:run"
train = "main_crew.main:train"
replay = "main_crew.main:replay"
test = "main_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
